--- a/404.html
+++ b/404.html
@@ -14,18 +14,7 @@
 <link rel="manifest" href="/manifest.json">
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.6df681b0bb21155cba49f6078e3559216772d8e03e780d240c73ea21817ed5e5.css" integrity="sha256-bfaBsLshFVy6SfYHjjVZIWdy2OA&#43;eA0kDHPqIYF&#43;1eU=">
-<script defer src="/zh-cn.search.min.af94d93ef98734e5e3e03020e2688fff7e23b70b0ddfcb34943ad88a6165a161.js" integrity="sha256-r5TZPvmHNOXj4DAg4miP/34jtwsN38s0lDrYimFloWE="></script>
-
-<script type="application/javascript">
-var doNotTrack = false;
-if (!doNotTrack) {
-	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-	ga('create', 'UA-138883536-1', 'auto');
-	
-	ga('send', 'pageview');
-}
-</script>
-<script async src='https://www.google-analytics.com/analytics.js'></script>
+<script defer src="/zh-cn.search.min.005abed9571dec59bd4a71a9b69dcbfc00fc1830917ea8b65ab045da7995ee63.js" integrity="sha256-AFq&#43;2Vcd7Fm9SnGptp3L/AD8GDCRfqi2WrBF2nmV7mM="></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -58,17 +47,6 @@ https://github.com/alex-shpak/hugo-book
 
     
     
-<script type="application/javascript">
-var doNotTrack = false;
-if (!doNotTrack) {
-	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-	ga('create', 'UA-138883536-1', 'auto');
-	
-	ga('send', 'pageview');
-}
-</script>
-<script async src='https://www.google-analytics.com/analytics.js'></script>
-
   </body>
 
   </html>
