--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="manifest" href="/manifest.json">
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.6df681b0bb21155cba49f6078e3559216772d8e03e780d240c73ea21817ed5e5.css" integrity="sha256-bfaBsLshFVy6SfYHjjVZIWdy2OA&#43;eA0kDHPqIYF&#43;1eU=">
-<script defer src="/zh-cn.search.min.94f14f367747a476ce178c6b27276d9b5444192512b5d511c1571472e90c9074.js" integrity="sha256-lPFPNndHpHbOF4xrJydtm1REGSUStdURwVcUcukMkHQ="></script>
+<script defer src="/zh-cn.search.min.aa202b1cd9e804b94a98db30f5ef821c878a71c25047b4ea402db4298a5ca2f6.js" integrity="sha256-qiArHNnoBLlKmNsw9e&#43;CHIeKccJQR7TqQC20KYpcovY="></script>
 <link rel="alternate" type="application/rss+xml" href="https://hekrxe.github.io/index.xml" title="冰与火" />
 <!--
 Made with Book Theme
